# daycounter-mcbe

./: CMakeLists.txt  README.md  manifest.json
.github/workflows/: build.yml
src/: main.cpp
